[CSS] Fix titles spacing.

--- a/public/css/f4inx.css
+++ b/public/css/f4inx.css
@@ -93,7 +93,7 @@ h2 {
   font-size: 2rem;
 }
 h3 {
-  margin-top: 1.5rem;
+  margin-top: 1rem;
   font-size: 1.5rem;
 }
 h4, h5, h6 {
